welcome.lessons.welcome.loopfor.LoopFor.scala.code

var compt = 0;
var i = 0;

for ( i<- 0 to 7){
	for (j<- 0 to i ){ avance();
	
}
     prendBiscuit();
     for (k<- i to 0 ) recule();
     poseBiscuit();








